# bearing

./: .gitignore  CHANGELOG.md  CLAUDE.md  COMPATIBILITY.md  CONTRIBUTING.md  Cargo.toml  LICENSE  NOTICE  PLAN.md  README.md  SECURITY.md  deny.toml  rust-toolchain.toml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  e2e.yml
docs/: BLOCK_POOLS_AND_SEGMENT_MERGING.md  PLAN.md  READ_PATH_RESEARCH.md  SCALING_MEMORY_AND_SEGMENTS.md  SETUP_PLAN.md  TESTING_STRATEGY.md  memory_and_segments.md
docs/backlog/: block_doc_iterator_gaps.md  byte_comparison_findings.md  compact_memory_encoding.md  cursor_read_path.md  doc_competitive_impacts.md  encoding_cursor_migration.md  encoding_package_cleanup.md  flush_control.md  known_issues.md  merge_design.md  merge_implementation_phases.md  newindex_known_issues.md  newindex_migration.md  read_path_architecture.md  read_path_migration.md  standard_tokenizer_uax29.md  stored_fields_sliced_skip.md  streaming_index_writes.md  terms_enum_iteration.md  tim_suffix_compression.md  unsupported_indexing_features.md
reference/: CLAUDE.md  download-lucene.sh  download-references.sh
reference/formats/: MAINTAINING.md  encoding-primitives.md  lucene103-formats.md  lucene90-formats.md  lucene94-formats.md  lucene99-formats.md
reference/indexing-data-flow/: 00_indexing_pipeline_overview.md  01_stored_fields.md  02_postings.md  03_norms.md  04_points_bkd.md  05_term_vectors.md  06_doc_values.md  07_metadata_files.md  08_layer_interactions.md  09_naming_conventions.md  README.md
src/: analysis.rs  codecs.rs  document.rs  encoding.rs  index.rs  lib.rs  newindex.rs  prelude.rs  search.rs  store.rs  store2.rs  test_util.rs  util.rs
src/analysis/: chunk_reader.rs  standard.rs  unicode.rs
src/codecs/: codec_file_handle.rs  codec_footers.rs  codec_headers.rs  codec_util.rs  competitive_impact.rs  fields_producer.rs  fields_writer.rs  lucene103.rs  lucene90.rs  lucene94.rs  lucene99.rs  packed_readers.rs  packed_writers.rs
testdata/: gen_docs.py  gen_golden_docs.py  gen_impact_docs.py  golden-summary.json
tests/: CLAUDE.md  IndexAllFields.java  VerifyIndex.java  compare_index_perf.sh  compare_java_rust.sh  compare_newindex_perf.sh  compare_query_perf.sh  e2e_all.sh  e2e_doc_values.rs  e2e_doc_values.sh  e2e_golden.sh  e2e_indexfiles.sh  e2e_newindex.sh  e2e_term_vectors.rs  e2e_term_vectors.sh  e2e_verify_impacts.sh  e2e_verify_tim_compression.sh  integration_analysis.rs  integration_boolean_query.rs  integration_indexing.rs  integration_store_input.rs  newindex_indexing.rs
(+393 files in other folders)
