[package]
name = "bearing"
version = "0.1.0"
edition = "2024"
description = "A Rust port of Apache Lucene"
license = "Apache-2.0"
repository = "https://github.com/toddfeak/bearing"
homepage = "https://github.com/toddfeak/bearing"
readme = "README.md"
keywords = ["lucene", "search", "indexing", "full-text-search"]
categories = ["text-processing"]
rust-version = "1.88"
exclude = ["reference/", "testdata/", "tests/", ".claude/", "docs/"]

[lib]
path = "src/lib.rs"

[dependencies]
log = "0.4"
mem_dbg = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
simple_logger = { version = "5.2", default-features = false }

[dev-dependencies]
assertables = "9.8.6"

[[bin]]
name = "indexfiles"
path = "src/bin/indexfiles.rs"

[[bin]]
name = "generate_summary"
path = "src/bin/generate_summary.rs"